# attention_imdb_benchmark

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml  steps.md
src/imdb_gw/data/: augment_labels.py  dataset_1x_aug70.py  make_mm_imdb1_clip_blip2_embeddings.py  make_mm_imdb2_clip_blip2_embeddings.py
src/imdb_gw/domains/: domains_obb.py
src/imdb_gw/overrides/: shimmer_patches.py
src/imdb_gw/training/: final_orchestrator.py  function_eval_attgw.py  function_train_attgw.py
